<resources>
    <string name="app_name">BuildmLearn Store</string>
    <string name="moto">Promoting Education&#8230;&#8230;&#8230;</string>
    <string name="title_activity_home_activitiy">Home</string>
    <string name="hello_world">Hello world!</string>
    <string name="start">Start</string>
    <string name="close">Close</string>
    <string name="title_activity_app_details">AppDetails</string>
    <string name="title_activity_categories">Categories</string>

    <string name="title_activity_categories_view">CategoriesView</string>
    <string name="title_activity_apps">AppsActivity</string>
	
    <string name="msg_txt">Press SPELL IT when you are ready. You may adjust the speech rate using the slider. Listen to the word as many times before answering. If you are not sure, you can skip the word.</string>
    <string name="speak">Listen</string>
    <string name="ready">Spell it!</string>
    <string name="submit">SUBMIT</string>
    <string name="enter_spelling">Enter Spelling</string>
    <string name="msg_successful">Great! You got it right</string>
    <string name="msg_failure">This is not the correct spelling</string>
    <string name="nxt_word">Next Word</string>
    <string name="restart">Restart</string>
    <string name="exit">Exit</string>
    <string name="skip">Skip</string>
    <string name="unanswered">Unanswered: </string>
    <string name="you_entered">You Entered</string>
    <string name="normal">Normal</string>
    <string name="low">Low</string>
    <string name="high">High</string>
    <string name="speech_rate">Speech Rate:</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="flip">Flip</string>


    <string name="install">INSTALL</string>
    <string name="share">Share</string>
    <string name="uninstall">Uninstall</string>
    <string name="home">HOME</string>
    <string name="search">Search</string>
    <string name="categories">Categories</string>
    <string name="settings">Settings</string>
    <string name="search_category_error">No category matches your search!</string>
    <string name="feedback">Give Feedback</string>
    <string name="rate_my_app">Rate My App</string>
    <string name="about">About</string>
    <string name="search_categories_error">There are no apps to be shown in this particular Category!</string>
    <string name="search_app_error">No app matches your search!</string>
    <string name="featured_categories">Featured Categories</string>
    <string name="search_text">SearchText</string>
    <string name="word">Word #</string>
    <string name="quiz_completion">You have completed the quiz!</string>
    <string name="more">more</string>
    <string name="less">less</string>
    <string name="featured_apps">Featured Apps</string>
    <string name="launch">Launch</string>
    <string name="reviews">Reviews</string>
    <string name="screenshots">Screenshots</string>
    <string name="details">Details</string>
    <string name="additional_information">Additional Information</string>


    <string name="email_body">BuildmLearn is a group of volunteers who collaborate to promote m-Learning with the specific aim of creating open source tools and enablers for teachers and students.
        The group is involved in developing easy to use m-Learning solutions, tool-kits and utilities for teachers (or parents) and students that help facilitate learning.
        The group comprises several like minded members of a wider community who collaborate to participate in a community building process.\nI want you to try this.
        http://www.buildmlearn.org
        ThankYou.</string>
    <string name="email_title">Try BuildmLearn Store</string>
    <string name="email_subject">Try BuildmLearn Store</string>
    <string name="share_title">How do you want to share?</string>
    <string name="install_success">Thank you for installing </string>
    <string name="uninstall_success">The app is uninstalled.</string>
    <string name="no_email_client_error">There is no email client installed on this phone.</string>
    <string name="feedback_subject">BuildmLearn Store Feedback</string>

</resources>
