<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.buildmlearn.appstore.activities.AppDetails">
    <android.support.v7.widget.Toolbar
        android:id="@+id/tool_bar_app_details"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@color/primary"
        android:elevation="7dp"
        android:paddingTop="@dimen/tool_bar_top_padding" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/ll_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:descendantFocusability="blocksDescendants" >
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                card_view:cardCornerRadius="3dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_margin="5dp"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">
                    <com.android.volley.toolbox.NetworkImageView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:scaleType="centerCrop"
                        android:id="@+id/details_AppIcon"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:id="@+id/details_AppTitle"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/details_AppSubTitle"
                            android:textSize="16sp"
                            android:textColor="@color/secondary_text"/>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <Button
                                android:layout_width="wrap_content"
                                android:layout_height="30dp"
                                android:id="@+id/btnInstall"
                                android:text="@string/install"
                                android:background="@color/primary"
                                android:elevation="7dp"
                                android:textColor="@android:color/white"
                                style="?android:attr/borderlessButtonStyle" />
                            <Button
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/btnShare"
                                android:layout_marginLeft="10dp"
                                android:text="@string/share"
                                style="?android:attr/borderlessButtonStyle"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                card_view:cardCornerRadius="3dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_margin="5dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_marginLeft="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/accent"
                        android:text="@string/details"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
                    <TextView
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:id="@+id/details_AppDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/primary_text"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
                    <TextView
                        android:layout_marginLeft="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/accent"
                        android:id="@+id/details_TxtMore"
                        android:clickable="true"
                        android:onClick="showMore"
                        android:text="@string/more"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                card_view:cardCornerRadius="3dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_margin="5dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_marginLeft="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/accent"
                        android:text="@string/screenshots"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="5dp">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                        <com.android.volley.toolbox.NetworkImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/details_Screenshot1"
                            android:clickable="true"/>
                        <com.android.volley.toolbox.NetworkImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:id="@+id/details_Screenshot2"
                            android:clickable="true"/>
                        </LinearLayout>
                    </HorizontalScrollView>

                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                card_view:cardCornerRadius="3dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_margin="5dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="vertical">
                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/accent"
                    android:text="@string/additional_information"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">
                        <TextView
                            android:layout_marginLeft="10dp"
                            android:id="@+id/details_AdditionalInfo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/secondary_text"
                            android:lineSpacingMultiplier="1.5"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
                        <TextView
                            android:layout_marginLeft="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/details_AdditionalDetails"
                            android:textColor="@color/primary_text"
                            android:lineSpacingMultiplier="1.5"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                card_view:cardCornerRadius="3dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_margin="5dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/accent"
                    android:text="@string/reviews"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/web_reload"
                            android:contentDescription="@string/cd_reviews_reload"
                            android:src="@android:drawable/ic_menu_rotate"
                            android:visibility="gone"/>
                    </LinearLayout>
                    <ProgressBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:indeterminate="true"
                        android:id="@+id/progressReviews"/>
                    <WebView
                        android:id="@+id/disqus"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
